feat: Parallelization Analysis, Benchmark Variance Reduction & Optimization Techniques for 2025 Module (#260)
* feat: Add parallelization analysis for 2025 module

Co-authored-by: bren <bren@juanantonio.info>

* Refactor parallelization analysis with Fork/Join examples

Co-authored-by: bren <bren@juanantonio.info>

* Refactor: Introduce Structured Concurrency for parallel tasks

This commit refactors the code to use Java 21's Structured Concurrency API for managing parallel tasks. This provides better error handling, cancellation, and lifecycle management compared to CompletableFuture. The documentation has also been updated to reflect these changes and provide a deep dive into Structured Concurrency.

Co-authored-by: bren <bren@juanantonio.info>

* Add theoretical performance estimates and recommendations

Co-authored-by: bren <bren@juanantonio.info>

* Restoring performance in Day12

* Improving performance

* Adding new profiling data

* Improving benchmark

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>